--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:DAO5J37kVLPF41psSPlyj1fubzD68CQaj55GLLzyf7M=
+APP_KEY=base64:FJiPxkSnAualptusJb6ebebkA2a1F+lfEo36hIaX7Ww=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -12,6 +12,8 @@ APP_FAKER_LOCALE=en_US
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
+PHP_CLI_SERVER_WORKERS=4
+
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
@@ -19,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel_notes
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=pgsql
+DB_PORT=5432  # Use a mesma porta que configurou no `docker-compose.yml`
+DB_DATABASE=laravel  # Nome atualizado
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -36,7 +38,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=file
+CACHE_STORE=database
 CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
@@ -47,11 +49,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=log
+MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
