--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:FJiPxkSnAualptusJb6ebebkA2a1F+lfEo36hIaX7Ww=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8088
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
